[gd_scene load_steps=2 format=3 uid="uid://c0rg6vawt3mcs"]

[ext_resource type="Script" path="res://Scenes/UI/statistics.gd" id="1_b3qsy"]

[node name="Statistics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3qsy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 201.0
offset_bottom = 108.0
color = Color(0.858824, 0.0666667, 0.145098, 1)

[node name="Score" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 62.0
offset_bottom = 11.5
grow_vertical = 2
text = "Score: 0"

[node name="Respawning" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = -10.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Respawning"

[node name="Bases" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 94.0
offset_bottom = -10.0
grow_vertical = 0
text = "Bases Left:"

[node name="Kills" type="Label" parent="ColorRect"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
text = "Kills: "

[node name="Reloading" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -33.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Reloading"

[node name="Invi" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
text = "Invincible Bases"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InviTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="InviTimer" to="." method="_on_invi_timer_timeout"]
